--- a/conf/efm.properties
+++ b/conf/efm.properties
@@ -57,7 +57,7 @@ efm.security.user.proxy.headerName=x-webauth-user
 efm.nifi.registry.enabled=true
 efm.nifi.registry.url=http://YourHostname:18080
 efm.nifi.registry.bucketId=
-efm.nifi.registry.bucketName=IoT
+efm.nifi.registry.bucketName=iot
 efm.nifi.registry.flowRefreshInterval=60s
 
 # Database Properties
